force-app/main/default/objects/MembershipbyMkt__c/MembershipbyMkt__c.object-meta.xml
<CustomObject>
    <label>Membership by Mkt</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership by Mkt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership by Mkt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>