force-app/main/default/objects/MembershipbyMkt__c/fields/AccountFirm__c.field-meta.xml
<CustomField>
    <fullName>AccountFirm__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Membership by Market</relationshipLabel>
    <relationshipName>MembershipbyMkts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>