force-app/main/default/objects/MembershipbyMkt__c/fields/AccountRowID__c.field-meta.xml
<CustomField>
    <fullName>AccountRowID__c</fullName>
    <formula>AccountFirm__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Row ID</label>
    <type>Text</type>
</CustomField>