force-app/main/default/objects/MembershipbyMkt__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <label>Total Market Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>