force-app/main/default/objects/MembershipbyMkt__c/fields/Surest_Market_Members__c.field-meta.xml
<CustomField>
    <fullName>Surest_Market_Members__c</fullName>
    <label>Surest Market Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>