force-app/main/default/objects/MembershipbyMkt__c/fields/UMR_Market_Members__c.field-meta.xml
<CustomField>
    <fullName>UMR_Market_Members__c</fullName>
    <label>UMR Market Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>