force-app/main/default/objects/MembershipbyMkt__c/fields/UNET_Market_Members__c.field-meta.xml
<CustomField>
    <fullName>UNET_Market_Members__c</fullName>
    <label>UNET Market Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>