force-app/main/default/objects/MembershipbyMkt__c/fields/UNETMarket__c.field-meta.xml
<CustomField>
    <fullName>UNETMarket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>