force-app/main/default/objects/MembershipbyMkt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Members__c</columns>
    <columns>Region__c</columns>
    <columns>State__c</columns>
    <columns>UNETMarket__c</columns>
    <columns>AccountFirm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>